// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PolandFlag/> renders correctly 1`] = `
<svg
  height={60}
  viewBox="0 0 16 10"
  width={100}
>
  <path
    d="M0 0h16v10H0z"
    fill="#fff"
  />
  <path
    d="M0 5h16v5H0z"
    fill="#dc143c"
  />
</svg>
`;

exports[`<PolandFlag/> renders correctly with optional props 1`] = `
<svg
  className="testClassName"
  height={60}
  viewBox="0 0 16 10"
  width={100}
>
  <path
    d="M0 0h16v10H0z"
    fill="#fff"
  />
  <path
    d="M0 5h16v5H0z"
    fill="#dc143c"
  />
</svg>
`;
